--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cryptography==44.0.1
 docker==7.1.0
 graphql-core==3.2.6
 idna==3.10
+iniconfig==2.0.0
 Jinja2==3.1.5
 jmespath==1.0.1
 joserfc==1.0.3
@@ -41,6 +42,7 @@ pathspec==0.12.1
 pbr==6.1.1
 pg8000==1.31.2
 platformdirs==4.3.6
+pluggy==1.5.0
 ply==3.11
 py-partiql-parser==0.6.1
 pycparser==2.22
@@ -48,6 +50,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
 pyparsing==3.2.1
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 referencing==0.36.2
