added Set up AWS task in yml file for run tests job

--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -21,6 +21,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Set up AWS
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-region: ${{ secrets.AWS_REGION}}
+            aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+            aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+
       - name: Run Checks
         run: make all
 
