--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ asn1crypto==1.5.1
 attrs==25.1.0
 aws-sam-translator==1.95.0
 aws-xray-sdk==2.14.0
+bandit==1.8.3
+black==25.1.0
 boto3==1.37.0
 botocore==1.37.0
 certifi==2025.1.31
@@ -11,6 +13,7 @@ cffi==1.17.1
 cfn-lint==1.25.1
 charset-normalizer==3.4.1
 click==8.1.8
+coverage==7.6.12
 cryptography==44.0.1
 docker==7.1.0
 graphql-core==3.2.6
@@ -51,6 +54,7 @@ pydantic_core==2.27.2
 Pygments==2.19.1
 pyparsing==3.2.1
 pytest==8.3.4
+pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 referencing==0.36.2
