--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -2,7 +2,7 @@ name: data-squid-de-tote-bag-data-transformation
 
 on:
   push:
-  pull_request:
+  #pull_request:
     branches:
         - main
         - develop
@@ -57,6 +57,10 @@ jobs:
       - name: Terraform Init
         working-directory: terraform
         run: terraform init
+
+      - name: build dependencies
+        working-directory: terraform
+        run: pip install -r ../requirements-lambda.txt -t ../dependencies/python
 
       - name: Terraform Plan
         working-directory: terraform
