--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -62,6 +62,12 @@ jobs:
         working-directory: terraform
         run: pip install -r ../requirements-lambda.txt -t ../dependencies/python
 
+      - name: copy utils in archive
+        working-directory: terraform
+        run: mkdir -p ../utils_layer/python/utils
+             cp ../utils/extraction_utils ../utils_layer/python/utils/
+             zip ../packages/extraction_utils/utils.zip -r ../utils_layer/
+
       - name: Terraform Plan
         working-directory: terraform
         run: terraform plan
