add commands for utils zip

--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -64,9 +64,7 @@ jobs:
 
       - name: copy utils in archive
         working-directory: terraform
-        run: mkdir -p ../utils_layer/python/utils
-             cp ../utils/extraction_utils ../utils_layer/python/utils/
-             zip ../packages/extraction_utils/utils.zip -r ../utils_layer/
+        run: mkdir -p ../utils_layer/python/utils && cp ../utils/extraction_utils ../utils_layer/python/utils/ && zip ../packages/extraction_utils/utils.zip -r ../utils_layer/
 
       - name: Terraform Plan
         working-directory: terraform
@@ -79,3 +77,7 @@ jobs:
       - name: Terraform Apply
         working-directory: terraform
         run: terraform apply -auto-approve
+
+
+
+        
