--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -66,7 +66,8 @@ jobs:
         working-directory: terraform
         run: | 
              mkdir -p ../utils_layer/python/utils 
-             cp ../utils/extraction_utils ../utils_layer/python/utils/ | zip ../packages/extraction_utils/utils.zip -r ../utils_layer/
+             cp ../utils/extraction_utils ../utils_layer/python/utils/
+             zip ../packages/extraction_utils/utils.zip -r ../utils_layer/
 
       - name: Terraform Plan
         working-directory: terraform
