--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -66,6 +66,7 @@ jobs:
         working-directory: terraform
         run: | 
              mkdir -p ../utils_layer/python/utils 
+             mkdir -p ../packages/extraction_utils
              cp -r ../utils/extraction_utils ../utils_layer/python/utils/
              zip ../packages/extraction_utils/utils.zip -r ../utils_layer/
 
