Debug lambda layers - archive utils in a python folder

--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -68,8 +68,8 @@ jobs:
              mkdir -p ../utils_layer/python/utils 
              mkdir -p ../packages/extraction_utils
              cp -r ../utils/extraction_utils ../utils_layer/python/utils/
-             cd ../
-             zip packages/extraction_utils/utils.zip -r utils_layer/python/
+             cd ../utils_layer
+             zip ../packages/extraction_utils/utils.zip -r python/
 
       - name: Terraform Plan
         working-directory: terraform
