Debug lambda layers - archive dependencies in a python folder

--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -60,7 +60,11 @@ jobs:
 
       - name: build dependencies
         working-directory: terraform
-        run: pip install -r ../requirements-lambda.txt -t ../dependencies/python
+        run: | 
+             pip install -r ../requirements-lambda.txt -t ../dependencies/python
+             mkdir -p ../packages/dependencies
+             cd ../dependencies
+             zip ../packages/dependencies/dependencies.zip -r python/
 
       - name: copy utils in archive
         working-directory: terraform
