Refactor utils folders to single file - update utils archive file structure

--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -71,7 +71,7 @@ jobs:
         run: | 
              mkdir -p ../utils_layer/python/utils 
              mkdir -p ../packages/utils
-             cp -r ../utils/ ../utils_layer/python/utils/
+             cp -r ../utils/ ../utils_layer/python/
              cd ../utils_layer
              zip ../packages/utils/utils.zip -r python/
 
