--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,12 @@ cfn-lint==1.25.1
 charset-normalizer==3.4.1
 click==8.1.8
 coverage==7.6.12
+cramjam==2.9.1
 cryptography==44.0.1
 docker==7.1.0
+dotenv==0.9.9
+fastparquet==2024.11.0
+fsspec==2025.2.0
 graphql-core==3.2.6
 idna==3.10
 iniconfig==2.0.0
@@ -37,6 +41,7 @@ mpmath==1.3.0
 multipart==1.2.1
 mypy-extensions==1.0.0
 networkx==3.4.2
+numpy==2.2.3
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.1
 packaging==24.2
@@ -57,6 +62,8 @@ pyparsing==3.2.1
 pytest==8.3.4
 pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
@@ -72,8 +79,8 @@ six==1.17.0
 stevedore==5.4.1
 sympy==1.13.3
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 xmltodict==0.14.2
-fastparquet
