--- a/.github/workflows/data-squid.yml
+++ b/.github/workflows/data-squid.yml
@@ -66,7 +66,7 @@ jobs:
              cd ../dependencies
              zip ../packages/dependencies/dependencies.zip -r python/
 
-      - name: copy extract utils in archive
+      - name: copy extract utils for archiving
         working-directory: terraform
         run: | 
              mkdir -p ../utils_layer/python/utils 
@@ -74,15 +74,6 @@ jobs:
              cp -r ../utils/ ../utils_layer/python/
              cd ../utils_layer
              zip ../packages/utils/utils.zip -r python/
-
-      - name: copy transform utils in archive
-        working-directory: terraform
-        run: | 
-             mkdir -p ../transform_utils_layer/python/utils 
-             mkdir -p ../packages/transformation_utils
-             cp -r ../utils/transform_utils ../transform_utils_layer/python/utils/
-             cd ../transform_utils_layer
-             zip ../packages/transformation_utils/utils.zip -r python/
 
       - name: Terraform Plan
         working-directory: terraform
